Simplified macros to add tests and examples

--- a/examples/3rdParty/boost/CMakeLists.txt
+++ b/examples/3rdParty/boost/CMakeLists.txt
@@ -1,6 +1,6 @@
 if(NOT MINGW AND SIPLASPLAS_BOOST_EXAMPLES) # See https://github.com/GueimUCM/siplasplas/issues/16
     # Boost examples
-    add_example(coroutine BOOST_COMPONENTS coroutine)
+    add_siplasplas_example_simple(coroutine BOOST_COMPONENTS coroutine)
     if(MSVC)
         set_target_properties(examples-coroutine PROPERTIES LINK_FLAGS /SAFESEH:NO)
     endif()
