--- a/examples/allocator/CMakeLists.txt
+++ b/examples/allocator/CMakeLists.txt
@@ -5,7 +5,7 @@ if(MSVC AND (CMAKE_BUILD_TYPE MATCHES "Debug"))
     message(WARNING "Run LIFO allocator example target disabled (See notes in examples/CMakeLists.txt)")
     set(exclude_from_run_all EXCLUDE_FROM_RUN_ALL)
 endif()
-add_example(lifo_allocator     DEPENDS siplasplas-allocator ${exclude_from_run_all})
-add_example(linear_allocator   DEPENDS siplasplas-allocator)
-add_example(freelist_allocator DEPENDS siplasplas-allocator)
-add_example(canary_allocator   DEPENDS siplasplas-allocator)
+add_siplasplas_example_simple(lifo_allocator     DEPENDS siplasplas-allocator ${exclude_from_run_all})
+add_siplasplas_example_simple(linear_allocator   DEPENDS siplasplas-allocator)
+add_siplasplas_example_simple(freelist_allocator DEPENDS siplasplas-allocator)
+add_siplasplas_example_simple(canary_allocator   DEPENDS siplasplas-allocator)
