--- a/examples/cmake/CMakeLists.txt
+++ b/examples/cmake/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_example(cmake-project EXCLUDE_FROM_RUN_ALL DEPENDS siplasplas-cmake)
+add_siplasplas_example_simple(cmake-project EXCLUDE_FROM_RUN_ALL DEPENDS siplasplas-cmake)
 
 target_compile_definitions(examples-cmake-project PRIVATE
     CMAKE_SOURCE_DIR="${CMAKE_SOURCE_DIR}"
