--- a/examples/signals/CMakeLists.txt
+++ b/examples/signals/CMakeLists.txt
@@ -4,7 +4,7 @@ if(SIPLASPLAS_CI_BUILD)
     set(EXCLUDE_FROM_RUN_ALL EXCLUDE_FROM_RUN_ALL)
 endif()
 
-add_reflection_example(signals ${EXCLUDE_FROM_RUN_ALL} DEPENDS siplasplas-signals ${CMAKE_THREAD_LIBS_INIT})
+add_siplasplas_example_simple(signals ${EXCLUDE_FROM_RUN_ALL} DEPENDS siplasplas-signals ${CMAKE_THREAD_LIBS_INIT})
 
 set(PRODUCER_MILLISECONDS 3000)
 set(CONSUMER_MILLISECONDS 1000)
