--- a/test/variant/CMakeLists.txt
+++ b/test/variant/CMakeLists.txt
@@ -1,1 +1,1 @@
-add_test(variant DEPENDS siplasplas-variant INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR})
+add_siplasplas_test_simple(variant DEPENDS siplasplas-variant INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR})
