type erasure ostreamable concept

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -4,3 +4,4 @@ add_subdirectory(allocator)
 add_subdirectory(variant)
 add_subdirectory(reflection)
 add_subdirectory(signals)
+add_subdirectory(typeerasure)
