--- a/test/typeerasure/CMakeLists.txt
+++ b/test/typeerasure/CMakeLists.txt
@@ -1,1 +1,8 @@
-add_subdirectory(concepts)
+add_siplasplas_test(typeerasure
+SOURCES
+    concepts/iostream_test.cpp
+    features/iostream_test.cpp
+DEPENDS
+    siplasplas-typeerasure
+DEFAULT_TEST_MAIN
+)
