[#43] value semantics concepts

--- a/test/typeerasure/CMakeLists.txt
+++ b/test/typeerasure/CMakeLists.txt
@@ -1,6 +1,7 @@
 add_siplasplas_test(typeerasure
 SOURCES
     concepts/iostream_test.cpp
+    concepts/valuesemantics_test.cpp
     features/iostream_test.cpp
 DEPENDS
     siplasplas-typeerasure
