[#47] configure reflection on all targets using reflection features

--- a/examples/cmake/CMakeLists.txt
+++ b/examples/cmake/CMakeLists.txt
@@ -1,4 +1,5 @@
 add_siplasplas_example_simple(cmake-project EXCLUDE_FROM_RUN_ALL DEPENDS siplasplas-cmake)
+configure_siplasplas_reflection(examples-cmake-project)
 
 target_compile_definitions(examples-cmake-project PRIVATE
     CMAKE_SOURCE_DIR="${CMAKE_SOURCE_DIR}"
