--- a/examples/reflection/CMakeLists.txt
+++ b/examples/reflection/CMakeLists.txt
@@ -22,16 +22,20 @@ function(get_ram_mb RESULT)
 endfunction()
 
 get_ram_mb(RAMMB)
-if(RAMMB GREATER 1024)
-    add_siplasplas_example_simple(chaiscript DEPENDS chaiscript siplasplas-reflection-static INSTALL_SOURCES myclass.hpp)
+if(RAMMB GREATER 1024 OR SIPLASPLAS_BUILD_CHAISCRIPT_EXAMPLE)
+    add_siplasplas_example_simple(chaiscript DEPENDS chaiscript siplasplas-reflection-static)
+    configure_siplasplas_reflection(examples-chaiscript)
 endif()
 
 add_siplasplas_example_simple(reflection DEPENDS siplasplas-reflection-dynamic json4moderncpp)
+configure_siplasplas_reflection(examples-reflection)
 export_target_properties(examples-reflection)
 
 # See issue #26
 if(NOT SIPLASPLAS_CI_BUILD)
     add_siplasplas_example_simple(plugin DEPENDS plugininterface siplasplas-reflection-dynamic)
+    configure_siplasplas_reflection(examples-plugin)
+
     # Force pluginexample to be built first, else the shared library
     # could not be loaded
     add_dependencies(examples-plugin pluginexample)
